--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,12 +60,12 @@ body {
 }
 
 .container--outer {
-	margin: 64px auto;
+	margin: 16px auto;
 	box-shadow: 0 0 10px rgba(50, 50, 50, .17);
 }
 
 .wrapper {
-	padding: 80px; /* ★Tomo★ */
+	padding: 64px 80px; /* ★Tomo★ */
 	background: #fff;
 }
 
