--- a/layouts/partials/widgets/sitemap.html
+++ b/layouts/partials/widgets/sitemap.html
@@ -4,10 +4,10 @@
         <li><a href="{{ "/medical-fraud/" | relURL }}" style="color: #4A90E2;"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="{{ "/medical-fraud/docs/about/" | relURL }}">🔹公益通報を通じて伝えたいこと📌</a></li>
         <li><a href="{{ "/medical-fraud/docs/press-conference-victory/" | relURL }}">🔹原告の勝訴記者会見！</a></li>
-        <li><a href="{{ "/medical-fraud/docs/whistleblowing/" | relURL }}">🔹厚生労働省への公益通報</a></li>
-        <li><a href="{{ "/medical-fraud/docs/retaliation/" | relURL }}">🔹公益通報者に対する報復</a></li>
         <li>🔹裁判解説
             <ul>
+                <li><a href="{{ "/medical-fraud/docs/whistleblowing/" | relURL }}">🔹厚生労働省への公益通報</a></li>
+                <li><a href="{{ "/medical-fraud/docs/retaliation/" | relURL }}">🔹公益通報者に対する報復</a></li>               
                 <li><a href="{{ "/medical-fraud/docs/dispute-point/" | relURL }}">🔹８つの争点</a></li>
                 <li><a href="{{ "/medical-fraud/docs/plaintiff-claims/" | relURL }}">🔹通報者（原告）の主張</a></li>
                 <li><a href="{{ "/medical-fraud/docs/defendant-claims/" | relURL }}">🔹病院側（被告）の主張</a></li>
@@ -20,9 +20,9 @@
                 <li><a href="{{ "/medical-fraud/docs/plaintiff-claims-original/" | relURL }}">🔹主張書面　通報者（原告）</a></li>
                 <li><a href="{{ "/medical-fraud/docs/defendant-claims-original/" | relURL }}">🔹主張書面　病院側（被告）</a></li>
                 <li><a href="{{ "/medical-fraud/docs/judgment-original/" | relURL }}">🔹判決文</a></li>
+                <li><a href="{{ "/medical-fraud/docs/supreme-court-dismissal/" | relURL }}">🔹最高裁が病院側の上告を却下</a></li>
             </ul>
-        </li>
-        <li><a href="{{ "/medical-fraud/docs/supreme-court-dismissal/" | relURL }}">🔹最高裁が病院側の上告を却下</a></li>
+        </li>        
         <li><a href="{{ "/medical-fraud/tags/医療不正の手口/" | relURL }}">🔹医療不正の手口を解説！</a></li>      
         <li><a href="{{ "/medical-fraud/tags/医療不正のニュース/" | relURL }}">🔹医療不正のニュース</a></li>
         <li><a href="{{ "/medical-fraud/tags/ブログ/" | relURL }}">🔹ブログ</a></li>
@@ -31,7 +31,7 @@
 
 <style>
 .sitemap ul {
-    margin-left: 20px;
+    margin-left: 3ex;
     list-style-type: none;
 }
 </style>
