--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,14 +1,9 @@
 /* フォント */
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap');
-body {
-    font-family: 'Noto Sans JP', sans-serif;
-}
-.fa, .fas, .far, .fal, .fad, .fab, 
-.bi {
-    font-family: initial !important;
-}
+:root {
+    --md-text-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                           "Helvetica Neue", Arial, sans-serif,
+                           "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  }
 /* 色 */
 :root {
     /* 使用するテーマカラー */
@@ -34,15 +29,11 @@ body {
     --theme-or-brite: #007aff;
 }
 
-/* 非表示 */
+/* 画面調整 */
 .widget-search {
-    display: none !important;
+    display: none !important; /* サーチを非表示 */
 }
-/* 文字装飾 */
-.strong-rd {
-	font-weight: 700;
-	color:var(--strong-color);
-}
+/* センター */
 .center {
     text-align: center;
 } 
@@ -51,7 +42,7 @@ body {
 		text-align: left;
 	} 
 }
-/* インデント */
+/* インデント文字装飾 */
 .idt {
 	margin:0;
 	text-indent:1em;
@@ -89,6 +80,10 @@ body {
 .pad6 {
 	margin:0;
 	padding-left:6em;
+}
+.strong-rd {
+	font-weight: 700;
+	color:var(--strong-color);
 }
 /* シェアボタン */
 .bdg-dark {
@@ -158,7 +153,6 @@ body {
     overflow: hidden;
     width: 100%;
     background: #fff;
-    transition: 0.3s;
 	margin-bottom: 4rem;
 } 
 .link-card a {
@@ -170,32 +164,36 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 0 0 20px;
-    gap: 10px;
+    margin: 0 0 0 1.5rem;
+    gap: 16px;
 }
 .link-text {
     flex: 1;
 }
 .link-text strong {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 1.6;
     font-weight: 400;
 }
 .link-text p {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 1.6;
     font-weight: 300;
-    margin: 0 0 20px 0;
+    margin: 0 0 1.5rem 0;
 }
 .link-image {
-    width: 320px;
-    height:200px;
-    flex-shrink: 0;
+    width: auto;
+    max-width: 20rem;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .link-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
 .link-card:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -206,22 +204,19 @@ body {
 @media screen and (max-width: 767px) {
     .link-card-content {
 		flex-direction: column;
-		align-items: flex-start;
-    }    
-    .link-image {
-		width: 100%;
-		height: auto;
-    }  
+		gap: 8px;
+    } 
     .link-text {
-		padding: 10px 0;
-    }
+		padding: 1rem 0;
+    }   
+    .link-image {
+        max-width: 100%;
+    }  
 }
 /* Twitterカード */
 .tweet-container {
     display: flex;
     justify-content: center;
-	margin-top: 32px;
 	margin-top: 2rem;
-	margin-bottom: 32px;
 	margin-bottom: 2rem;
 }
