--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,6 @@
+/* アイコンのインストール */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 /* フォント */
 :root {
     --md-text-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
