--- a/layouts/partials/widgets/sitemap.html
+++ b/layouts/partials/widgets/sitemap.html
@@ -1,5 +1,5 @@
 <div class="widget">
-    <h4 class="widget__title">Sitemap</h4>
+    <h4 class="widget__title">サイトマップ</h4>
     <ul class="sitemap">
         <li><a href="{{ "/medical-fraud/" | relURL }}" style="color: #4A90E2;"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="{{ "/medical-fraud/docs/about/" | relURL }}">🔹公益通報を通じて伝えたいこと📌</a></li>
